--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title> Kidz School</title>
-<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;600;700&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
-<script src="https://kit.fontawesome.com/d3498fdeb0.js" crossorigin="anonymous"></script>
+    <title> Kidz School</title>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;600;700&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/d3498fdeb0.js" crossorigin="anonymous"></script>
 
+    <link href="css/base.css" rel="stylesheet">
+    <link href="css/flex.css" rel="stylesheet">
+    <link href="css/layout.css" rel="stylesheet">
+    <link href="css/mediaqueries.css" rel="stylesheet">
+    <link href="css/crayon.css" rel="stylesheet">
 </head>
-
 <body>
-    
-</body>
 
+</body>
 </html>
