--- a/index.html
+++ b/index.html
@@ -14,6 +14,71 @@
     <link href="css/crayon.css" rel="stylesheet">
 </head>
 <body>
+   <!--Navigation--> 
+    <header>
+        <!--Colored Bars-->
+        <div class="d-flex">
+            <div class="flex-grow bg-warning bar-height"></div>
+            <div class="flex-grow bg-success bar-height"></div>
+            <div class="flex-grow bg-danger bar-height"></div>
+            <div class="flex-grow bg-info bar-height"></div>
+            <div class="flex-grow bg-primary bar-height"></div>
+            <div class="flex-grow bg-cozy bar-height"></div>
+            <div class="flex-grow bg-warning bar-height"></div>
+            <div class="flex-grow bg-success bar-height"></div>
+            <div class="flex-grow bg-danger bar-height"></div>
+            <div class="flex-grow bg-info bar-height"></div>
+            <div class="flex-grow bg-primary bar-height"></div>
+            <div class="flex-grow bg-cozy bar-height"></div>
+        </div>
 
+        <nav class="d-flex max-width justify-content-between align-items-center mx-auto p-6">
+            <img class="logo-width" src="images/logo-school.png">
+            <div class="d-flex justify-content-between">
+                <a href="#" class="d-flex flex-column align-items-center">
+                    <div class="d-flex align-items-center justify-content-center bg-info p-4 circle">
+                        <i class=" fa fa-home text-white"></i>
+                    </div>
+                    <span class="text-info">Home</span>
+                </a>
+                <a href="#" class="d-flex flex-column align-items-center">
+                    <div class="d-flex align-items-center justify-content-center bg-cozy p-4 circle">
+                        <i class=" fa fa-home text-white"></i>
+                    </div>
+                    <span class="text-cozy mt-4 lh-sm">Store</span>
+                </a>
+                <a href="#" class="d-flex flex-column align-items-center">
+                    <div class="d-flex align-items-center justify-content-center bg-success p-4 circle">
+                        <i class=" fa fa-home text-white"></i>
+                    </div>
+                    <span class="text-success mt-4 lh-sm">Courses</span>
+                </a>
+                <a href="#" class="d-flex flex-column align-items-center">
+                    <div class="d-flex align-items-center justify-content-center bg-info p-4 circle">
+                        <i class=" fa fa-home text-white"></i>
+                    </div>
+                    <span class="text-info">Blog</span>
+                </a>
+                
+            </div>
+            <div>fg</div>
+        </nav>
+
+        <!-- Colored Bars -->
+        <div class="d-flex">
+            <div class="flex-grow bg-warning bar-height"></div>
+            <div class="flex-grow bg-success bar-height"></div>
+            <div class="flex-grow bg-danger bar-height"></div>
+            <div class="flex-grow bg-info bar-height"></div>
+            <div class="flex-grow bg-primary bar-height"></div>
+            <div class="flex-grow bg-cozy bar-height"></div>
+            <div class="flex-grow bg-warning bar-height"></div>
+            <div class="flex-grow bg-success bar-height"></div>
+            <div class="flex-grow bg-danger bar-height"></div>
+            <div class="flex-grow bg-info bar-height"></div>
+            <div class="flex-grow bg-primary bar-height"></div>
+            <div class="flex-grow bg-cozy bar-height"></div>
+        </div>
+    </header>
 </body>
 </html>
