--- a/index.html
+++ b/index.html
@@ -42,26 +42,33 @@
                     <span class="text-info">Home</span>
                 </a>
                 <a href="#" class="d-flex flex-column align-items-center">
-                    <div class="d-flex align-items-center justify-content-center bg-cozy p-4 circle">
+                    <div class="d-flex align-items-center justify-content-center bg-cozy p-4 circle shadow-sm">
                         <i class=" fa fa-home text-white"></i>
                     </div>
                     <span class="text-cozy mt-4 lh-sm">Store</span>
                 </a>
                 <a href="#" class="d-flex flex-column align-items-center">
-                    <div class="d-flex align-items-center justify-content-center bg-success p-4 circle">
+                    <div class="d-flex align-items-center justify-content-center bg-success p-4 circle circle shadow-sm">
                         <i class=" fa fa-home text-white"></i>
                     </div>
                     <span class="text-success mt-4 lh-sm">Courses</span>
                 </a>
                 <a href="#" class="d-flex flex-column align-items-center">
-                    <div class="d-flex align-items-center justify-content-center bg-info p-4 circle">
+                    <div class="d-flex align-items-center justify-content-center bg-warning p-4 circle shadow-sm">
                         <i class=" fa fa-home text-white"></i>
                     </div>
-                    <span class="text-info">Blog</span>
+                    <span class="text-warning">Blog</span>
                 </a>
                 
             </div>
-            <div>fg</div>
+            <div class="d-flex justify-content-between">
+                <a href="#" class="d-flex flex-column align-items-center text-decoration-none position">
+                    <div class="d-flex align-items-center justify-content-center bg-info p-4 shadow-sm">
+                        <i class=" fa fa-home text-white"></i>
+                    </div>
+                    <span class="text-info position-absolute con-badge mt-4 lh-sm">3</span>
+                </a>
+        </div>
         </nav>
 
         <!-- Colored Bars -->
