--- a/index.html
+++ b/index.html
@@ -35,40 +35,45 @@
         <nav class="d-flex max-width justify-content-between align-items-center mx-auto p-6">
             <img class="logo-width" src="images/logo-school.png">
             <div class="d-flex justify-content-between">
-                <a href="#" class="d-flex flex-column align-items-center">
+                <a href="#" class="d-flex flex-column align-items-center text-decoration-none">
                     <div class="d-flex align-items-center justify-content-center bg-info p-4 circle">
                         <i class=" fa fa-home text-white"></i>
                     </div>
-                    <span class="text-info">Home</span>
+                    <span class="text-info mt-4 lh-sm">Home</span>
                 </a>
-                <a href="#" class="d-flex flex-column align-items-center">
+                <a href="#" class="d-flex flex-column align-items-center text-decoration-none">
                     <div class="d-flex align-items-center justify-content-center bg-cozy p-4 circle shadow-sm">
-                        <i class=" fa fa-home text-white"></i>
+                        <i class=" fa fa-store text-white"></i>
                     </div>
                     <span class="text-cozy mt-4 lh-sm">Store</span>
                 </a>
-                <a href="#" class="d-flex flex-column align-items-center">
+                <a href="#" class="d-flex flex-column align-items-center text-decoration-none">
                     <div class="d-flex align-items-center justify-content-center bg-success p-4 circle circle shadow-sm">
-                        <i class=" fa fa-home text-white"></i>
+                        <i class=" fa fa-user-graduate text-white"></i>
                     </div>
                     <span class="text-success mt-4 lh-sm">Courses</span>
                 </a>
-                <a href="#" class="d-flex flex-column align-items-center">
+                <a href="#" class="d-flex flex-column align-items-center text-decoration-none">
                     <div class="d-flex align-items-center justify-content-center bg-warning p-4 circle shadow-sm">
-                        <i class=" fa fa-home text-white"></i>
+                        <i class=" fa fa-blog text-white"></i>
                     </div>
-                    <span class="text-warning">Blog</span>
+                    <span class="text-warning mt-4 lh-sm">Blog</span>
                 </a>
-                
             </div>
             <div class="d-flex justify-content-between">
-                <a href="#" class="d-flex flex-column align-items-center text-decoration-none position">
-                    <div class="d-flex align-items-center justify-content-center bg-info p-4 shadow-sm">
-                        <i class=" fa fa-home text-white"></i>
+                <a href="#" class="d-flex flex-column align-items-center text-decoration-none position-relative">
+                    <div class="d-flex align-items-center justify-content-center bg-cozy border-radius p-4 shadow-sm">
+                        <i class="fa fa-shopping-basket text-white"></i>
                     </div>
-                    <span class="text-info position-absolute con-badge mt-4 lh-sm">3</span>
+                    <span class="text-white position-absolute icon-badge circle bg-success border-small-white text-size-xxs">3</span>
                 </a>
-        </div>
+                <a href="#" class="d-flex flex-column align-items-center text-decoration-none position-relative">
+                    <div class="d-flex align-items-center justify-content-center bg-info border-radius p-4 shadow-sm">
+                        <i class="fa fa-bars text-white"></i>
+                    </div>
+                </a>
+        
+            </div>
         </nav>
 
         <!-- Colored Bars -->
@@ -85,6 +90,34 @@
             <div class="flex-grow bg-info bar-height"></div>
             <div class="flex-grow bg-primary bar-height"></div>
             <div class="flex-grow bg-cozy bar-height"></div>
+        </div>
+
+        <!-- Drop-down Nav (small devices) -->
+        <div class="mx-6">
+            <a href="#" class="d-flex flex-row-reverse align-items-center text-decoration-none p-6 border-bottom-xs">
+                <div class="d-flex align-items-center justify-content-center bg-info p-4 circle shadow-sm">
+                    <i class=" fa fa-home text-white"></i>
+                </div>
+                <span class="text-info mr-4">Home</span>
+            </a>
+            <a href="#" class="d-flex flex-row-reverse align-items-center text-decoration-none p-6 border-bottom-xs">
+                <div class="d-flex align-items-center justify-content-center bg-cozy p-4 circle shadow-sm">
+                    <i class=" fa fa-store text-white"></i>
+                </div>
+                <span class="text-cozy mr-4">Store</span>
+            </a>
+            <a href="#" class="d-flex flex-row-reverse align-items-center text-decoration-none p-6 border-bottom-xs">
+                <div class="d-flex align-items-center justify-content-center bg-success p-4 circle circle shadow-sm">
+                    <i class=" fa fa-user-graduate text-white"></i>
+                </div>
+                <span class="text-success mr-4">Courses</span>
+            </a>
+            <a href="#" class="d-flex flex-row-reverse align-items-center text-decoration-none p-6">
+                <div class="d-flex align-items-center justify-content-center bg-warning p-4 circle shadow-sm">
+                    <i class=" fa fa-blog text-white"></i>
+                </div>
+                <span class="text-warning mr-4">Blog</span>
+            </a>
         </div>
     </header>
 </body>
