Navigation Drop-down menu

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
 
         <!-- Drop-down Nav (small devices) -->
-        <div class="mx-6">
+        <div class="mx-6 d-none">
             <a href="#" class="d-flex flex-row-reverse align-items-center text-decoration-none p-6 border-bottom-xs">
                 <div class="d-flex align-items-center justify-content-center bg-info p-4 circle shadow-sm">
                     <i class=" fa fa-home text-white"></i>
