--- a/index.html
+++ b/index.html
@@ -159,7 +159,15 @@
     <section class="d-flex justify-content-center align-items-center my-15">
         <div class="crayon" style="--crayon-color: #b5d56a;--crayon-paper-color: #e4f0cc;--crayon-line-color: #b5d56a;"></div>
         <h2 class="mx-4 text-cozy">Our Features</h2>
-        <div class= "crayon" style="--crayon-color:#b5d56a;--crayon-paper-color: #e4f0cc;--crayon-line-color: #b5d56a;"></div>
+        <div class="crayon" style="--crayon-color:#b5d56a;--crayon-paper-color: #e4f0cc;--crayon-line-color: #b5d56a;"></div>
     </section> 
+
+    <!-- Features -->
+<section class="d-flex justify-content-center mb-15">
+    <div class="d-flex justify-content-between flex-wrap max-width">
+        text text
+    </div>
+</section>
+
 </body>
 </html>
