--- a/index.html
+++ b/index.html
@@ -164,9 +164,93 @@
 
     <!-- Features -->
 <section class="d-flex justify-content-center mb-15">
-    <div class="d-flex justify-content-between flex-wrap max-width">
-        text text
-    </div>
+    <div class="d-flex justify-content-between flex-wrap max-width px-12">
+        <!-- Features -->
+        <div class="d-flex f-width px-4 mb-12">
+            <!-- Circle and Icon -->
+        <div class="mr-4">
+            <div class="bg-primary circle shadow-lg icon-feature position-relative"> <!-- yttre diven-->
+                <i class=" fa fa-graduation-cap text-light text-size-lg centerXY position-absolute"></i> <!-- Själva ikonen-->
+                <div class="border-sm icon-circle circle centerXY position-absolute"></div> <!-- indre diven dvs Vita cirklen-->
+            </div>
+        </div>
+        <div class="d-flex flex-column">
+            <h2 class="text-primary lh-lg ">Experienced Teachers</h2>
+            <div> Lorem ipsum dolor sit amet consectetur adipisicing maximus penetratus</div>
+                </div>
+        </div>
+        <!-- Features -->
+        <div class="d-flex f-width px-4 mb-12">
+            <!-- Circle and Icon -->
+        <div class="mr-4">
+            <div class="bg-cozy circle shadow-lg icon-feature position-relative"> <!-- yttre diven-->
+                <i class=" fa fa-graduation-cap text-light text-size-lg centerXY position-absolute"></i> <!-- Själva ikonen-->
+                <div class="border-sm icon-circle circle centerXY position-absolute"></div> <!-- indre diven dvs Vita cirklen-->
+            </div>
+        </div>
+        <div class="d-flex flex-column">
+            <h2 class="text-cozy lh-lg ">Experienced Teachers</h2>
+            <div> Lorem ipsum dolor sit amet consectetur adipisicing maximus penetratus</div>
+                </div>
+            </div>
+                    <!-- Features -->
+        <div class="d-flex f-width px-4 mb-12">
+            <!-- Circle and Icon -->
+        <div class="mr-4">
+            <div class="bg-info circle shadow-lg icon-feature position-relative"> <!-- yttre diven-->
+                <i class=" fa fa-graduation-cap text-light text-size-lg centerXY position-absolute"></i> <!-- Själva ikonen-->
+                <div class="border-sm icon-circle circle centerXY position-absolute"></div> <!-- indre diven dvs Vita cirklen-->
+            </div>
+        </div>
+        <div class="d-flex flex-column">
+            <h2 class="text-info lh-lg ">Experienced Teachers</h2>
+            <div> Lorem ipsum dolor sit amet consectetur adipisicing maximus penetratus</div>
+                </div>
+            </div>
+                    <!-- Features -->
+        <div class="d-flex f-width px-4">
+            <!-- Circle and Icon -->
+        <div class="mr-4">
+            <div class="bg-success circle shadow-lg icon-feature position-relative"> <!-- yttre diven-->
+                <i class=" fa fa-graduation-cap text-light text-size-lg centerXY position-absolute"></i> <!-- Själva ikonen-->
+                <div class="border-sm icon-circle circle centerXY position-absolute"></div> <!-- indre diven dvs Vita cirklen-->
+            </div>
+        </div>
+        <div class="d-flex flex-column">
+            <h2 class="text-success lh-lg ">Experienced Teachers</h2>
+            <div> Lorem ipsum dolor sit amet consectetur adipisicing maximus penetratus</div>
+                </div>
+            </div>
+                    <!-- Features -->
+        <div class="d-flex f-width px-4">
+            <!-- Circle and Icon -->
+        <div class="mr-4">
+            <div class="bg-danger circle shadow-lg icon-feature position-relative"> <!-- yttre diven-->
+                <i class=" fa fa-graduation-cap text-light text-size-lg centerXY position-absolute"></i> <!-- Själva ikonen-->
+                <div class="border-sm icon-circle circle centerXY position-absolute"></div> <!-- indre diven dvs Vita cirklen-->
+            </div>
+        </div>
+        <div class="d-flex flex-column">
+            <h2 class="text-danger lh-lg ">Experienced Teachers</h2>
+            <div> Lorem ipsum dolor sit amet consectetur adipisicing maximus penetratus</div>
+                </div>
+            </div>
+                    <!-- Features -->
+        <div class="d-flex f-width px-4">
+            <!-- Circle and Icon -->
+        <div class="mr-4">
+            <div class="bg-warning circle shadow-lg icon-feature position-relative"> <!-- yttre diven-->
+                <i class=" fa fa-graduation-cap text-light text-size-lg centerXY position-absolute"></i> <!-- Själva ikonen-->
+                <div class="border-sm icon-circle circle centerXY position-absolute"></div> <!-- indre diven dvs Vita cirklen-->
+            </div>
+        </div>
+        <div class="d-flex flex-column">
+            <h2 class="text-warning lh-lg ">Experienced Teachers</h2>
+            <div> Lorem ipsum dolor sit amet consectetur adipisicing maximus penetratus</div>
+                </div>
+            </div>
+            
+        </div>
 </section>
 
 </body>
