Contact/Image Gallery update

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <img src="images/Slider/img-4.jpg" alt="Children at School">
         </div>
     </figure>
-</section>
+    </section>
 
     <!-- Features heading -->
     <section class="d-flex justify-content-center align-items-center my-15">
@@ -249,9 +249,32 @@
             <div> Lorem ipsum dolor sit amet consectetur adipisicing maximus penetratus</div>
                 </div>
             </div>
-            
-        </div>
-</section>
 
+        </div>
+    </section>
+
+    <!-- Contact -->
+<section class="p-15 bg-primary">
+<div class="d-flex flex-column justify-content-center align-items-center text-white">
+    <h1 class="mb-6">Need more information?</h1>
+    <div class="mb-12">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+    <button class="btn-danger text-white p-8 text-size-lg text-uppercase border-transparent shadow-sm border-radius">
+        <i class="fa fa-phone"></i>
+        Contact
+    </button>
+</div>
+    </section>
+
+    <!-- Image Gallery Heading -->
+<section class="d-flex justify-content-center align-items-center my-15">
+    <div class="crayon" style="--crayon-color: #ea7066;--crayon-paper-color: #fab2ab;--crayon-line-color: #ea7066;"></div>
+    <h2 class="mx-4 text-warning">Image Gallery</h2>
+    <div class="crayon" style="--crayon-color: #ea7066;--crayon-paper-color: #fab2ab;--crayon-line-color: #ea7066;"></div>
+    </section>
+
+    <!-- Image Gallery -->
+    <section class="">
+
+    </section>
 </body>
 </html>
