--- a/index.html
+++ b/index.html
@@ -249,7 +249,6 @@
             <div> Lorem ipsum dolor sit amet consectetur adipisicing maximus penetratus</div>
                 </div>
             </div>
-
         </div>
     </section>
 
@@ -273,8 +272,12 @@
     </section>
 
     <!-- Image Gallery -->
-    <section class="">
-
+    <section class="d-flex justify-content-center align-items-center">
+        <!-- Images -->
+    <div class="d-flex justify-content-center flex-wrap max-width">
+        <img src="images/gallery/gallery-img1.jpg" class="border-radius" alt="Image of Children at school">
+        <img src="images/gallery/gallery-img2.jpg" class="border-radius" alt="Image of Children at school">
+    </div>
     </section>
 </body>
 </html>
