--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     </section>
 
     <!-- Image Gallery Heading -->
-<section class="d-flex justify-content-center align-items-center my-15">
+<section class="d-flex justify-content-center align-items-center mt-15 mb-10">
     <div class="crayon" style="--crayon-color: #ea7066;--crayon-paper-color: #fab2ab;--crayon-line-color: #ea7066;"></div>
     <h2 class="mx-4 text-warning">Image Gallery</h2>
     <div class="crayon" style="--crayon-color: #ea7066;--crayon-paper-color: #fab2ab;--crayon-line-color: #ea7066;"></div>
@@ -275,8 +275,14 @@
     <section class="d-flex justify-content-center align-items-center">
         <!-- Images -->
     <div class="d-flex justify-content-center flex-wrap max-width">
-        <img src="images/gallery/gallery-img1.jpg" class="border-radius" alt="Image of Children at school">
-        <img src="images/gallery/gallery-img2.jpg" class="border-radius" alt="Image of Children at school">
+        <img src="images/gallery/gallery-img1.jpg" class="border-radius m-6" alt="Image of Children at school">
+        <img src="images/gallery/gallery-img2.jpg" class="border-radius m-6" alt="Image of Children at school">
+        <img src="images/gallery/gallery-img3.jpg" class="border-radius m-6" alt="Image of Children at school">
+        <img src="images/gallery/gallery-img4.jpg" class="border-radius m-6" alt="Image of Children at school">
+        <img src="images/gallery/gallery-img5.jpg" class="border-radius m-6" alt="Image of Children at school">
+        <img src="images/gallery/gallery-img6.jpg" class="border-radius m-6" alt="Image of Children at school">
+        <img src="images/gallery/gallery-img7.jpg" class="border-radius m-6" alt="Image of Children at school">
+        <img src="images/gallery/gallery-img8.jpg" class="border-radius m-6" alt="Image of Children at school">
     </div>
     </section>
 </body>
