--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </header>
 
     <!-- Top Slider -->
-<section class="overflow-hidden">
+    <section class="overflow-hidden">
     <figure class="d-flex position-relative slider-width slider-animation">
         <div class=" slider-container position-relative">
             <div class="position-absolute centerXY bg-dark-transparent text-light text-center p-4">
@@ -163,7 +163,7 @@
     </section> 
 
     <!-- Features -->
-<section class="d-flex justify-content-center mb-15">
+    <section class="d-flex justify-content-center mb-15">
     <div class="d-flex justify-content-between flex-wrap max-width px-12">
         <!-- Features -->
         <div class="d-flex f-width px-4 mb-12">
@@ -253,7 +253,7 @@
     </section>
 
     <!-- Contact -->
-<section class="p-15 bg-primary">
+    <section class="p-15 bg-primary">
 <div class="d-flex flex-column justify-content-center align-items-center text-white">
     <h1 class="mb-6">Need more information?</h1>
     <div class="mb-12">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
@@ -265,7 +265,7 @@
     </section>
 
     <!-- Image Gallery Heading -->
-<section class="d-flex justify-content-center align-items-center mt-15 mb-10">
+    <section class="d-flex justify-content-center align-items-center mt-15 mb-10">
     <div class="crayon" style="--crayon-color: #ea7066;--crayon-paper-color: #fab2ab;--crayon-line-color: #ea7066;"></div>
     <h2 class="mx-4 text-warning">Image Gallery</h2>
     <div class="crayon" style="--crayon-color: #ea7066;--crayon-paper-color: #fab2ab;--crayon-line-color: #ea7066;"></div>
@@ -285,5 +285,35 @@
         <img src="images/gallery/gallery-img8.jpg" class="border-radius m-6" alt="Image of Children at school">
     </div>
     </section>
+
+<!-- Teachers -->
+    <div class="bg-cozy my-15 p-12">
+        <!-- Teachers Heading -->
+    <section class="d-flex justify-content-center align-items-center mt-4 mb-10">
+        <div class="crayon" style="--crayon-color: #f0c24b;--crayon-paper-color: #f8e2ab;--crayon-line-color: #ea7066;"></div>
+        <h2 class="mx-4 text-warning">Our Teachers</h2>
+        <div class="crayon" style="--crayon-color: #f0c24b;--crayon-paper-color: #f8e2ab;--crayon-line-color: #ea7066;"></div>
+    </section>
+    <!-- Our Teachers -->
+        <div class="d-flex flex-wrap justify-content-around text-white max-width mx-auto">
+        <div class="d-flex flex-column align-items-center m-6">
+            <img src="images/avatars/avatar-1.jpg" class="circle circle-lg " alt="Teacher">
+            <div>Mrs. Smith</div>
+        </div>
+        <div class="d-flex flex-column align-items-center m-6">
+            <img src="images/avatars/avatar-2.jpg" class="circle circle-lg " alt="Teacher">
+            <div>Bad Teacher</div>
+        </div>
+        <div class="d-flex flex-column align-items-center m-6">
+            <img src="images/avatars/avatar-3.jpg" class="circle circle-lg " alt="Teacher">
+            <div>Mr. NicoG</div>
+        </div>
+        <div class="d-flex flex-column align-items-center m-6">
+            <img src="images/avatars/avatar-4.jpg" class="circle circle-lg " alt="Teacher">
+            <div>Mrs. Malkolova</div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
