--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <!--Navigation-->
     <header>
-        <!--The colored bar-->
+        <!--Colored Bars-->
         <div class="d-flex">
             <div class="flex-grow bg-warning bar-height"></div>
             <div class="flex-grow bg-success bar-height"></div>
@@ -35,6 +35,7 @@
             <div class="flex-grow bg-primary bar-height"></div>
             <div class="flex-grow bg-cozy bar-height"></div>
         </div>
+
         <!--Navigation icons-->
         <nav class="d-flex max-width justify-content-between align-items-center mx-auto p-6">
             <img class="logo-width" src="images/logo-school.png">
@@ -96,6 +97,7 @@
             <div class="flex-grow bg-primary bar-height "></div>
             <div class="flex-grow bg-cozy bar-height "></div>
         </div>
+
         <!-- Drop down nav -->
         <div class="mx-6 d-none d-sm-block">
             <a href="#" class="d-flex flex-row-reverse align-items-center text-decoration-none p-6 border-bottom-xs">
@@ -496,6 +498,83 @@
             </div>
         </div>
     </section>
+
+    <!--Colored Bars-->
+    <div class="d-flex">
+        <div class="flex-grow bg-warning bar-height"></div>
+        <div class="flex-grow bg-success bar-height"></div>
+        <div class="flex-grow bg-danger bar-height"></div>
+        <div class="flex-grow bg-info bar-height"></div>
+        <div class="flex-grow bg-primary bar-height"></div>
+        <div class="flex-grow bg-cozy bar-height"></div>
+        <div class="flex-grow bg-warning bar-height"></div>
+        <div class="flex-grow bg-success bar-height"></div>
+        <div class="flex-grow bg-danger bar-height"></div>
+        <div class="flex-grow bg-info bar-height"></div>
+        <div class="flex-grow bg-primary bar-height"></div>
+        <div class="flex-grow bg-cozy bar-height"></div>
+    </div>
+
+    <!--Footer-->
+    <footer class="d-flex justify-content-center align-items-center">
+        <div class="d-flex justify-content-center max-width m-15 ">
+            <!--Adress-->
+            <div class="d-flex flex-column width-lg mr-6">
+                <img src="images/logo-school.png" class="logo-width mb-6" alt="Logo">
+                <p class="mb-6"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Galagtus deluxus maximus
+                    dumbledore veniam Esse accusamus.</p>
+                <p class="mb-6">Exercitation officiis dignissimos quo, a adipisci temporibus.</p>
+                <div class="d-flex align-items-center mb-2">
+                    <i class="fas fa-map-marker-alt text-success mr-4"></i>
+                    <span>1st street, 12345, Stockholm, Sweden</span>
+                </div>
+                <div class="d-flex align-items-center mb-2">
+                    <i class="fas fa-at text-warning mr-4"></i>
+                    <span>info@kids-school.com</span>
+                </div>
+                <div class="d-flex align-items-center mb-2">
+                    <i class="fas fa-phone-alt text-cozy mr-4"></i>
+                    <span> +46 008 70 05 35</span>
+                </div>
+            </div>
+            <!--Form-->
+            <form class="d-flex flex-column flex-grow">
+                <h2 class="text-primary mb-2">Contact</h2>
+                <div class="position-relative mb-2">
+                    <i class="fa fa-user text-success position-absolute icon-form-control"></i>
+                    <input type="text" placeholder="First name"
+                        class="form-control border-color-success border-sm border-radius lh-md p-4 min-width-xxl">
+                </div>
+                <div class="position-relative mb-2">
+                    <i class="fa fa-at text-warning position-absolute icon-form-control"></i>
+                    <input type="text" placeholder="Email"
+                        class="form-control border-color-warning border-sm border-radius lh-md p-4 min-width-xxl">
+                </div>
+                <div class="position-relative mb-2">
+                    <i class="fa fa-comments text-info position-absolute icon-form-control"></i>
+                    <textarea placeholder="Write your message here..." class="form-control border-color-info border-sm border-radius lh-md p-4 min-width-xxl"></textarea>
+                </div>
+                <button class="btn-primary shadow-lg text-size-md text-uppercase border-transparent text-white p-6">Send Message</button>
+            </form>
+        </div>
+    </footer>
+
+    <!--Colored Bars-->
+    <div class="d-flex">
+        <div class="flex-grow bg-warning bar-height"></div>
+        <div class="flex-grow bg-success bar-height"></div>
+        <div class="flex-grow bg-danger bar-height"></div>
+        <div class="flex-grow bg-info bar-height"></div>
+        <div class="flex-grow bg-primary bar-height"></div>
+        <div class="flex-grow bg-cozy bar-height"></div>
+        <div class="flex-grow bg-warning bar-height"></div>
+        <div class="flex-grow bg-success bar-height"></div>
+        <div class="flex-grow bg-danger bar-height"></div>
+        <div class="flex-grow bg-info bar-height"></div>
+        <div class="flex-grow bg-primary bar-height"></div>
+        <div class="flex-grow bg-cozy bar-height"></div>
+    </div>
+
 </body>
 
 </html>
