--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                         <i class="fa fa-bars text-white"></i>
                     </div>
                 </a>
+
             </div>
         </nav>
 
@@ -132,7 +133,7 @@
         <figure class="d-flex position-relative slider-width slider-animation">
             <div class="slider-container position-relative">
                 <div
-                    class="position-absolute centerXY btn-dark-transparent text-light text-center p-4 heading-xxs-width">
+                    class="position-absolute centerXY bg-dark-transparent text-light text-center p-4 heading-xxs-width">
                     <h1>School Website</h1>
                     <p>Lorem ipsum dolor sit amet consectetur</p>
                 </div>
@@ -229,7 +230,7 @@
                 </div>
             </div>
             <!-- Features -->
-            <div class="d-flex f-width px-4">
+            <div class="d-flex f-width px-4 mb-sm-12">
                 <!-- Circle and Icon -->
                 <div class="mr-4">
                     <div class="bg-success circle shadow-lg icon-feature position-relative">
@@ -246,7 +247,7 @@
                 </div>
             </div>
             <!-- Features -->
-            <div class="d-flex f-width px-4">
+            <div class="d-flex f-width px-4 mb-sm-12">
                 <!-- Circle and Icon -->
                 <div class="mr-4">
                     <div class="bg-danger circle shadow-lg icon-feature position-relative">
@@ -308,14 +309,14 @@
     <section class="d-flex justify-content-center align-items-center">
         <!-- Images -->
         <div class="d-flex justify-content-center flex-wrap max-width">
-            <img src="images/gallery/gallery-img1.jpg" class="border-radius m-6" alt="Image of Children at school">
-            <img src="images/gallery/gallery-img2.jpg" class="border-radius m-6" alt="Image of Children at school">
-            <img src="images/gallery/gallery-img3.jpg" class="border-radius m-6" alt="Image of Children at school">
-            <img src="images/gallery/gallery-img4.jpg" class="border-radius m-6" alt="Image of Children at school">
-            <img src="images/gallery/gallery-img5.jpg" class="border-radius m-6" alt="Image of Children at school">
-            <img src="images/gallery/gallery-img6.jpg" class="border-radius m-6" alt="Image of Children at school">
-            <img src="images/gallery/gallery-img7.jpg" class="border-radius m-6" alt="Image of Children at school">
-            <img src="images/gallery/gallery-img8.jpg" class="border-radius m-6" alt="Image of Children at school">
+            <img src="images/gallery/gallery-img1.jpg" class="border-radius m-6 img-sm-width" alt="Image of Children at school">
+            <img src="images/gallery/gallery-img2.jpg" class="border-radius m-6 img-sm-width" alt="Image of Children at school">
+            <img src="images/gallery/gallery-img3.jpg" class="border-radius m-6 img-sm-width" alt="Image of Children at school">
+            <img src="images/gallery/gallery-img4.jpg" class="border-radius m-6 img-sm-width" alt="Image of Children at school">
+            <img src="images/gallery/gallery-img5.jpg" class="border-radius m-6 img-sm-width" alt="Image of Children at school">
+            <img src="images/gallery/gallery-img6.jpg" class="border-radius m-6 img-sm-width" alt="Image of Children at school">
+            <img src="images/gallery/gallery-img7.jpg" class="border-radius m-6 img-sm-width" alt="Image of Children at school">
+            <img src="images/gallery/gallery-img8.jpg" class="border-radius m-6 img-sm-width" alt="Image of Children at school">
 
         </div>
     </section>
@@ -365,8 +366,8 @@
         <!-- Our Classes Container -->
         <div class="d-flex justify-content-center flex-wrap text-white max-width mx-auto">
             <!-- Classes Card 1 -->
-            <div class="d-flex position-relative overflow-hidden border-radius m-6 card-width">
-                <img src="images/events/events-img1.jpg" class="img-lg-width" alt="Children playing at school">
+            <div class="d-flex flex-xs-column position-relative overflow-hidden border-radius m-6 card-width">
+                <img src="images/events/events-img1.jpg" class="img-lg-width img-xs-width" alt="Children playing at school">
                 <div class="d-flex flex-column bg-info p-6">
                     <h2 class="mb-6">Lorem ipsum dolor</h2>
                     <div><i class=" far fa-calendar-alt mr-4 mb-4"></i>Age 2 to 4 Years</div>
@@ -383,8 +384,8 @@
                 </div>
             </div>
             <!-- Classes Card 2 -->
-            <div class="d-flex position-relative overflow-hidden border-radius m-6 card-width">
-                <img src="images/events/events-img2.jpg" class="img-lg-width" alt="Children playing at school">
+            <div class="d-flex flex-xs-column position-relative overflow-hidden border-radius m-6 card-width">
+                <img src="images/events/events-img2.jpg" class="img-lg-width img-xs-width" alt="Children playing at school">
                 <div class="d-flex flex-column bg-cozy p-6">
                     <h2 class="mb-6">Lorem ipsum dolor</h2>
                     <div><i class=" far fa-calendar-alt mr-4 mb-4"></i>Age 2 to 4 Years</div>
@@ -401,8 +402,8 @@
                 </div>
             </div>
             <!-- Classes Card 3 -->
-            <div class="d-flex position-relative overflow-hidden border-radius m-6 card-width">
-                <img src="images/events/events-img3.jpg" class="img-lg-width" alt="Children playing at school">
+            <div class="d-flex flex-xs-column position-relative overflow-hidden border-radius m-6 card-width">
+                <img src="images/events/events-img3.jpg" class="img-lg-width img-xs-width" alt="Children playing at school">
                 <div class="d-flex flex-column bg-primary p-6">
                     <h2 class="mb-6">Lorem ipsum dolor</h2>
                     <div><i class=" far fa-calendar-alt mr-4 mb-4"></i>Age 2 to 4 Years</div>
@@ -419,8 +420,8 @@
                 </div>
             </div>
             <!-- Classes Card 4 -->
-            <div class="d-flex position-relative overflow-hidden border-radius m-6 card-width">
-                <img src="images/events/events-img4.jpg" class="img-lg-width" alt="Children playing at school">
+            <div class="d-flex flex-xs-column position-relative overflow-hidden border-radius m-6 card-width">
+                <img src="images/events/events-img4.jpg" class="img-lg-width img-xs-width" alt="Children playing at school">
                 <div class="d-flex flex-column bg-danger p-6">
                     <h2 class="mb-6">Lorem ipsum dolor</h2>
                     <div><i class=" far fa-calendar-alt mr-4 mb-4"></i>Age 2 to 4 Years</div>
@@ -455,7 +456,7 @@
 
         <!-- Statistics Circles -->
         <div class="d-flex justify-content-center align-items-center text-center ">
-            <div class="d-flex">
+            <div class="d-flex flex-sm-column">
                 <!-- Circle -->
                 <div class="d-flex flex-column m-6">
                     <div
@@ -517,7 +518,7 @@
 
     <!--Footer-->
     <footer class="d-flex justify-content-center align-items-center">
-        <div class="d-flex justify-content-center max-width m-15 ">
+        <div class="d-flex justify-content-center max-width m-15 flex-sm-column">
             <!--Adress-->
             <div class="d-flex flex-column width-lg mr-6">
                 <img src="images/logo-school.png" class="logo-width mb-6" alt="Logo">
@@ -538,7 +539,7 @@
                 </div>
             </div>
             <!--Form-->
-            <form class="d-flex flex-column flex-grow">
+            <form class="d-flex flex-column flex-grow mt-sm-12">
                 <h2 class="text-primary mb-2">Contact</h2>
                 <div class="position-relative mb-2">
                     <i class="fa fa-user text-success position-absolute icon-form-control"></i>
